--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "ether": "^0.0.9",
+    "hardhat": "^2.13.0",
     "next": "16.1.2",
+    "postcss": "^8.5.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^25.0.8",
     "babel-plugin-react-compiler": "1.0.0",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4.1.18"
   }
 }
